@@ -5,11 +5,14 @@ on:
   push:
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
     strategy:
       matrix:
         emacs_version:
+          # we don't include 25.1 in the matrix due to an ert testing issue
+          - 26.1
+          - 26.3
           - 27.1
           - 27.2
           - 28.1
@@ -21,23 +24,24 @@ jobs:
         with:
           version: ${{ matrix.emacs_version }}
 
-      - name: Install Cask
-        run: git clone https://github.com/cask/cask ~/.cask
-
-      - name: Add Cask to Path
-        run: echo "$HOME/.cask/bin" >> $GITHUB_PATH
-
-      - name: Validate Cask
-        run: cask emacs --version
+      - name: Setup Cask
+        uses: conao3/setup-cask@master
 
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Install Elisp Deps
-        run: cask install
-        
-      - name: Build
-        run: cask build
+      - name: Test
+        env:
+          COVERALLS_FLAG_NAME: Emacs ${{ matrix.emacs_version }}
+          COVERALLS_PARALLEL: 1
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          cask install
+          cask exec ert-runner dired-rsync-ert.el
 
-      - name: Run ERT tests
-        run: cask exec ert-runner dired-rsync-ert.el
+  finalize:
+      runs-on: ubuntu-latest
+      if: always()
+      needs: test
+      steps:
+        - run: curl "https://coveralls.io/webhook?repo_name=$GITHUB_REPOSITORY&repo_token=${{ secrets.GITHUB_TOKEN }}" -d "payload[build_num]=$GITHUB_RUN_NUMBER&payload[status]=done"
